# stylus-workshop-rust-solidity

./: .gitignore  README.md
art/: Cargo.toml
art/src/: art.rs  lib.rs  main.rs  utils.rs
erc20/: foundry.toml
erc20/src/: MyToken.sol
nft/: Cargo.toml
nft/.cargo/: config.toml
nft/src/: erc721.rs  lib.rs  main.rs
scripts/: .env.example  1-deploy.sh  2-initialize.sh  deploy.sh  getBalance.sh  getTokenImage.sh  mintNft.sh  mintNftFromTokenContract.sh  mintTokens.sh  test-all.sh  transferNft.sh
