[package]
name = "stylus-workshop-rust-nft-art"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.6.0"
alloy-sol-types = "=0.7.6"
hex-literal = "0.4.1"
crc = "3.0.1"
fastrand = { version = "2.0.0", default-features = false }
adler = { version = "1.0.2", default-features = false }
base64 = { version = "0.21.4", default-features = false, features = ["alloc"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
